--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,15 @@
-connexion == 1.1.15
+connexion >= 1.1.15
 python_dateutil == 2.6.0
 setuptools >= 21.0.0
+jinja2 >=2.11.1 
+keras == 2.4.3
+grpcio == 1.27.2
+tensorflow == 2.2.0
+dlib == 19.19.0
+faker >= 4.0.2 
+face_recognition >= 1.3.0
+flask == 1.1.2
+flask-cors >= 3.0.9
+pyjwt >= 1.7.1
+opencv-python == 4.2.0.32
+psycopg2 >= 2.8.4
