--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,6 @@ include /etc/nginx/modules-enabled/*.conf;
 events 
 {
 	worker_connections 768;
-	# multi_accept on;
 }
 
 http 
@@ -49,6 +48,7 @@ http
 		location /
 		{
 			root /home/osboxes/Downloads/git/swagger_server/static;
+			http2_push /img/image.jpg;
 		}
 		
 		location /test
@@ -104,55 +104,26 @@ http
 		}
 	}
 
-	##
-	# Basic Settings
-	##
-
 	sendfile on;
 	tcp_nopush on;
 	tcp_nodelay on;
 	keepalive_timeout 65;
 	types_hash_max_size 2048;
-	# server_tokens off;
-
-	# server_names_hash_bucket_size 64;
-	# server_name_in_redirect off;
 
 	include /etc/nginx/mime.types;
 	default_type application/octet-stream;
-	
-	##
-	# SSL Settings
-	##
 	
     ssl_certificate /home/osboxes/Downloads/git/swagger_server/localhost.crt;
     ssl_certificate_key /home/osboxes/Downloads/git/swagger_server/localhost.key;
 	ssl_protocols TLSv1 TLSv1.1 TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
 	ssl_prefer_server_ciphers on;
 
-	##
-	# Logging Settings
-	##
-
 	access_log /var/log/nginx/access.log;
 	error_log /var/log/nginx/error.log;
 
-	##
-	# Gzip Settings
-	##
-
 	gzip on;
-
-	# gzip_vary on;
-	# gzip_proxied any;
 	gzip_comp_level 3;
-	# gzip_buffers 16 8k;
-	# gzip_http_version 1.1;
 	gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
-	##
-	# Virtual Host Configs
-	##
 
 	include /etc/nginx/conf.d/*.conf;
 	include /etc/nginx/sites-enabled/*;
