--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,9 +8,10 @@ deploy-dev:
     only:
         - web
     script:
-        - apt-get install software-properties-common
-        - add-apt-repository ppa:deadsnakes/ppa
-        - apt-get update
+        - apt-get -yq update
+        - apt-get -yq install software-properties-common
+        - add-apt-repository -y ppa:deadsnakes/ppa
+        - apt-get -yq update
         - apt-get install python3.8
         - pip install --user -r requirements.txt 
         - pip install --user pytest
