--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ deploy-dev:
         - add-apt-repository -y ppa:deadsnakes/ppa
         - apt-get -yq update
         - apt-get install python3.8
-        - pip install --user -r requirements.txt 
-        - pip install --user pytest
+        - apt-get install python-pip
+        - pip3 install --user -r requirements.txt 
+        - pip3 install --user pytest
         - pytest
