--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,8 @@ deploy-dev:
         - apt-get -yq install software-properties-common
         - add-apt-repository -y ppa:deadsnakes/ppa
         - apt-get -yq update
-        - apt-get install python3.8
-        - apt-get install python-pip
+        - apt-get -yq install python3.8 python3.8-dev
+        - apt-get -yq install python-minimal python2.7 python2.7-dev python3.6 python3.6-dev python3.7 python3.7-dev python-pip
         - pip3 install --user -r requirements.txt 
         - pip3 install --user pytest
         - pytest
