--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,6 @@ deploy-dev:
         - add-apt-repository -y ppa:deadsnakes/ppa
         - apt-get update -qy
         - apt-get install -y python-dev python3-pip
-        - pip install -r requirements.txt
+        - pip3 install -r requirements.txt
         - pip3 install --user pytest
         - pytest
