--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ deploy-dev:
         - add-apt-repository -y ppa:deadsnakes/ppa
         - apt-get update -qy
         - apt-get install -y python-dev python3-pip
-        - apt-get install cmake
+        - apt-get install -y cmake
         - pip3 install -r requirements.txt
         - pip3 install --user pytest
         - pytest
