--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,12 +19,13 @@ deploy-dev:
     only:
         - web
     script:
-        - apt-get -yq update
-        - apt-get -yq install software-properties-common
-        - add-apt-repository -y ppa:deadsnakes/ppa
-        - apt-get update -qy
-        - apt-get install -y python-dev python3-pip
-        - apt-get install -y cmake
-        - pip3 install -r requirements.txt
-        - pip3 install --user pytest
-        - pytest
+        - pip3 list
+        # - apt-get -yq update
+        # - apt-get -yq install software-properties-common
+        # - add-apt-repository -y ppa:deadsnakes/ppa
+        # - apt-get update -qy
+        # - apt-get install -y python-dev python3-pip
+        # - apt-get install -y cmake
+        # - pip3 install -r requirements.txt
+        # - pip3 install --user pytest
+        # - pytest
