--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,6 +22,8 @@ deploy-dev:
     only:
         - web
     script:
+        - pip3 install -r requirements.txt
+        - pip3 install pytest
         - pip3 list
         # - apt-get -yq update
         # - apt-get -yq install software-properties-common
@@ -29,6 +31,4 @@ deploy-dev:
         # - apt-get update -qy
         # - apt-get install -y python-dev python3-pip
         # - apt-get install -y cmake
-        # - pip3 install -r requirements.txt
-        # - pip3 install --user pytest
         # - pytest
