--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,6 +32,7 @@ before_script:
     #- export PYTHONPATH="$PYTHONPATH:./swagger_server"
     #- python -c "import sys;print(sys.path)"
     - export PGPASSWORD=$POSTGRES_PASSWORD
+    - apt-get install -y locate
     - locate psql
     - psql -c "CREATE DATABASE test_db;" -U postgres
     #- psql -h "postgres" -U "$POSTGRES_USER" -d "$POSTGRES_DB" -c "SELECT 'OK' AS status;"
