--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,6 +13,7 @@ variables:
     POSTGRES_HOST_AUTH_METHOD: trust
 
 before_script:
+    - pwd
     - pip3 install -r requirements.txt
     - export PYTHONPATH="$PYTHONPATH:./swagger_server"
     - python -c "import sys;print(sys.path)"
