--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,7 +13,6 @@ variables:
     POSTGRES_HOST_AUTH_METHOD: trust
 
 before_script:
-    - pwd
     - pip3 install -r requirements.txt
     - export PYTHONPATH="$PYTHONPATH:./swagger_server"
     - python -c "import sys;print(sys.path)"
@@ -28,6 +27,7 @@ unit-test:
     only:
         - web
     script:
+        - cd /builds/SI7-Agent/web/swagger_server
         - pytest -v swagger_server/tests/test_jwt.py
         #- pytest -v swagger_server/tests/test_data_access.py
         - pytest -v swagger_server/tests/test_modules.py
