setup for integrate mock test testing

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,8 +41,8 @@ integrate-test:
         - web
     script:
         - cd /builds/SI7-Agent/web/swagger_server
-        #- pytest -v tests/test_int_mocking.py
-        - pytest -v tests/test_int_no_mocking.py
+        - pytest -v tests/test_int_mocking.py
+        #- pytest -v tests/test_int_no_mocking.py
         
 e2e-test:
     stage: e2e_test
